# pahfit

./: .gitignore  .rtd-environment.yml  .travis.yml  CHANGES.rst  ISO_SWS_pack_file.yml  ISO_SWS_pack_file_R_1600.ipac  MANIFEST.in  README.rst  astropy_modeling_tests.ipynb  run_pahfit  setup.cfg  setup.py  tox.ini
.github/workflows/: tex-tests.yml
docs/: PAHFIT_v2.1.rst  background.rst  conf.py  file_formats.rst  fit_spectrum.rst  index.rst  install.rst  modelpack_spec.yml  plot_result.rst  version_description.rst
docs/idl_vs_python/: python_vs_IDL_fit.rst
docs/pahfit/: index.rst
docs/version_description/: PAHFIT_v2.1.rst  version_description.rst
idl_vs_python/: python_vs_IDL_fit.rst
licenses/: LICENSE.rst
models/: modelpack_PAHFIT_Classic.yml  modelpack_spec.yml
pahfit/: PAHFIT.py  PAHFITBase.py  PAHFIT_Spitzer_Exgal.py  PAHFit.py  __init__.py  apfitter.py  base.py  component_models.py  errors.py  feature_strengths.py  features.py  fitter.py  helpers.py  instrument.py  model.py  pyISMFit.py  scipack_ExGal_SpitzerIRSSLLL.ipac  units.py
pahfit/data/: 1120229.txt  1C_snr_gt20.ecsv  Lai2020_1C_akari_spitzer.ecsv  M101_Nucleus_irs_IDL-PAHFIT-result.xdr  Nucleus_irs.fits  README.rst  orion_bar_SWS_with7023shape.ipac  orion_bar_SWS_with7023shape.txt
pahfit/features/: __init__.py  features.py  features_format.py  util.py
pahfit/fitters/: ap_components.py  ap_fitter.py  fitter.py
pahfit/old/: pyISMFit.py
pahfit/packs/: ISO_SWS_pack_file_R_500.ipac  PDR_pack.yml  classic.yml  instrument.py  iso.sws.speed0.yaml  iso.sws.speed1.yaml  iso.sws.speed2.yaml  iso.sws.speed3.yaml  iso.sws.speed4.yaml  scipack_ExGal_AkariIRC+SpitzerIRSSLLL.ipac  scipack_ExGal_SpitzerIRSSLLL.ipac  scipack_ExGal_SpitzerIRSSLLL_asymmetry.ipac
pahfit/scripts/: plot_pahfit.py  run_pahfit.py
pahfit/tests/: setup_package.py  test_classic_pack.py  test_feature_parsing.py  test_fitting_spitzer.py  test_included_spectra.py  test_model_impl.py  test_model_trimming.py
pahfit/utils/: plot_PAHFIT.py
pypahfit/: NGC7023-NW-BRIGHT.txt  PAHFit.py  PAHFit2.py  __init__.py  pyISMFit.py
scripts/: plot_pahfit  plot_pahfit.py  run_pahfit  run_pahfit.py
(+44 files in other folders)
