[metadata]
name = pahfit
author = PAHFIT developers
author_email = kgordon@stsci.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://pahfit.readthedocs.io
description = fit the features in near- and mid-IR astronomical spectra
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = PAHFIT/pahfit

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy
    matplotlib


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pahfit = data/*, packs/*, packs/science/*, packs/instrument/*

[tool:pytest]
testpaths = "pahfit" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[options.entry_points]
console_scripts =
    run_pahfit = pahfit.scripts.run_pahfit:main
    plot_pahfit = pahfit.scripts.plot_pahfit:main

[coverage:run]
omit =
    pahfit/_astropy_init*
    pahfit/conftest.py
    pahfit/*setup_package*
    pahfit/tests/*
    pahfit/*/tests/*
    pahfit/extern/*
    pahfit/version*
    */pahfit/_astropy_init*
    */pahfit/conftest.py
    */pahfit/*setup_package*
    */pahfit/tests/*
    */pahfit/*/tests/*
    */pahfit/extern/*
    */pahfit/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503

[pycodestyle]
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503
